[package]
name = "async-deadman"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BlueZeeKing/async-deadman"
description = "A simple async deadman switch that triggers receivers when dropped"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12.1" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
